--- a/static/style.css
+++ b/static/style.css
@@ -39,20 +39,22 @@ body{
     background-size: cover;
 }
 
-
-
-
-.comentarios__input, input{
-    max-width: 600px;
+.comentarios__input {
+    /* max-width: 600px; */
+    width: 500px;
     margin: 0;
     display: flex;
     flex-direction: column;
     border-radius: 16px;
+    margin-left: 12%;
+}
+
+.comentarios__input, input{
     text-align: center;
     padding: 2px;
     background: var(--color-accent-dark);
     color: var(--color-background);
-
+    border-radius: 10px;
 }
 
 .comentarios__button{
@@ -61,13 +63,19 @@ body{
     background-color: var(--color-accent-dark);
 }
 
-/* .comentarios__visualizar{
-    margin-top: 50px;
+.comentarios__visualizar {
+
+    margin-top: 15%;
     display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 700px;
     height: 500px;
-    display: flex;
     background-color: var(--color-accent-dark);
-    color: var(--color-background);
     border-radius: 20px;
-} */
+    justify-content: center;
+}
+.comentarios_nav__visualizar{
+    padding: 10px;
+    color: var(--color-secondary);
+}
