--- a/templates/pagina-principal.html
+++ b/templates/pagina-principal.html
@@ -8,18 +8,28 @@
 <body>
     <main>
 
-        <div class="input--nome"
-            ><input type="text" autocomplete="off" placeholder="Digite seu email...">
-        </div>
-        <div class="input--senha"
-            ><input type="text" autocomplete="off" placeholder="Digite sua senha...">
-        </div>
-
-        <button>Cadastrar</button>
 
 
+        <form action="/post/cadastro" method="POST">
+            <div class="input--nome">
+                <input type="text" name="nome" autocomplete="off" placeholder="Digite seu nome...">
+            </div>
+            <div class="input--login">
+                <input type="text" name="login" autocomplete="off" placeholder="Digite seu login...">
+            </div>
+            <div class="input--senha"
+                ><input type="text" name="senha" autocomplete="off" placeholder="Digite sua senha...">
+            </div>
 
-        <a href="">Já tem um cadastro? Clique aqui!</a>
+            <button>Cadastre-se</button>
+
+            <a href="/">Já possui um cadastro? Clique aqui!</a>
+        </form>
+
+        <!-- <a href="/post/cadastro"></a> -->
+
+
+
 
 
     </main>
